--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -1,5 +1,4 @@
 .filter-main {
-  // padding: 0 10px;
   .filter-header {
     align-items: baseline;
     display: flex;
@@ -9,16 +8,6 @@
       margin: 0;
     }
 
-    .filter-cell {
-      &:first-child {
-        padding: 0 20px 0 0;
-      }
-
-      &:last-child {
-        width: 100%;
-      }
-    }
-
     .ant-select {
       width: 100% !important;
       margin: 0 0 20px 0;
@@ -26,52 +15,45 @@
   }
 
   .filter-section {
-    .filters-row {
+    .c-form {
+      align-items: unset;
+    }
+    .jobs-grid {
+      min-width: 300px;
+    }
+
+    .silder-equivalent {
+      color: $green;
+      position: absolute;
+      bottom: -30px;
+    }
+    .c-input-with-icon {
       width: 100%;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-
-      .c-form {
-        align-items: unset;
-      }
-
-      .silder-equivalent {
-        color: $green;
-        position: absolute;
-        bottom: -30px;
-      }
-      .c-input-with-icon {
-        width: 100%;
-        max-width: 300px;
-      }
+      max-width: 300px;
     }
 
-    .margin-y {
-      margin: 20px 0;
-    }
+    .switches {
+      padding: 6px 0;
+      width: 100%;
 
-    .filter-cell {
-      .switches {
-        padding: 6px 0;
+      .ant-form-item-control {
+        order: -1;
+        max-width: 48px !important;
+        padding-right: 8px;
+      }
+      .ant-form-item-label {
+        label {
+          margin-bottom: 1px;
+        }
+      }
 
-        .ant-form-item-control {
-          order: -1;
-          padding-right: 8px;
-        }
-        .ant-form-item-label {
-          label {
-            margin-bottom: 1px;
-          }
-        }
+      .ant-switch-small {
+        min-width: 38px;
+        max-width: 38px;
+      }
 
-        .ant-switch-small {
-          min-width: 38px;
-        }
-
-        .ant-switch-checked {
-          background-color: $green;
-        }
+      .ant-switch-checked {
+        background-color: $green;
       }
     }
 
@@ -135,7 +117,9 @@
       border-color: #eee;
     }
 
-    .ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector input {
+    .ant-select-show-search.ant-select:not(.ant-select-customize-input)
+      .ant-select-selector
+      input {
       cursor: auto;
       visibility: hidden;
     }
