--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -172,14 +172,10 @@ p {
 
   input {
     font-size: $font-size-sm;
-    // box-shadow: $theme-shadow !important;
-    // border: none !important;
     border-radius: 100px !important;
-    height: 32px !important;
-    padding: 0 18px !important;
-    // box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
-    border: 1px solid $primary !important;
     background: $white !important;
+    height: 30px !important;
+    padding: 0 7px !important;
 
     &.ant-input-lg {
       width: 400px;
@@ -201,6 +197,18 @@ p {
     &:focus {
       border-color: $primary;
     }
+  }
+
+  .ant-form-item-control-input-content > input,
+  .ant-input-affix-wrapper > input {
+    border: 1px solid $primary !important;
+    height: 32px !important;
+    padding: 0 18px !important;
+  }
+
+  .react-tel-input > input {
+    padding: 0 18px !important;
+    height: 32px !important;
   }
 
   // textarea {
@@ -581,7 +589,10 @@ p {
   height: 3px;
 }
 
-.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-content
+  > .ant-steps-item-title::after {
   background-color: $green;
 }
 
@@ -789,8 +800,11 @@ p {
   }
 }
 // select placeholder
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector::after,
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector::after,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-item,
 .ant-select-single.ant-select-lg:not(.ant-select-customize-input)
   .ant-select-selector
   .ant-select-selection-placeholder {
